--- a/k8s/service-green.yaml
+++ b/k8s/service-green.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: parrot-green # name modified
+  name: parrot-green
   namespace: eks-blue-green
 spec:
   ports:
